--- a/schedule.yml
+++ b/schedule.yml
@@ -3,4 +3,7 @@ schedule:
   year: "2023"
   lessons:
     - description: Building your first Spring application
-      date: "2022-03-03"
+    - date: "2022-03-03"
+
+    - description: Building your second Spring application
+    - date: "2022-03-10"
